# kimodo

./: CHANGELOG.md  README.md
.github/workflows/: build_wheels.yml
MotionCorrection/: CMakeLists.txt  setup.py
MotionCorrection/src/cpp/Math/: SIMD.h  Scalar.h
docs/source/benchmark/: pipeline.md
docs/source/getting_started/: quick_start.md
docs/source/user_guide/: cli.md  motion_convert.md  output_formats.md
kimodo/: postprocess.py
kimodo/assets/skeletons/somaskel77/: somaskel77_standard_tpose.bvh
kimodo/demo/: app.py  config.py  memory_manager.py  ui.py
kimodo/exports/: bvh.py  motion_convert_lib.py
kimodo/model/: kimodo_model.py  load_model.py
kimodo/model/llm2vec/: llm2vec_wrapper.py
kimodo/motion_rep/reps/: tmr_motionrep.py
kimodo/scripts/: generate.py  motion_convert.py  run_text_encoder_server.py
kimodo/viz/: playback.py  scene.py
